--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "array_shift.js",
   "dependencies": {
+    "eslint": "^4.19.1",
     "jest": "^22.4.3"
   },
   "devDependencies": {},
@@ -11,7 +12,6 @@
     "lint": "eslint **/*.js",
     "test": "jest ./__test__/lib/array_shift.test.js --verbose --coverage",
     "test-watch": "jest ./__test__/lib/array_shift.test.js --watchAll --verbose --coverage"
-
   },
   "repository": {
     "type": "git",
