--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "lint": "eslint **/*.js",
-    "test": "jest ./__test__/lib/fizzBuzzTree.test.js --verbose --coverage",
-    "test-watch": "jest ./__test__/lib/fizzBuzzTree.test.js --watchAll --verbose --coverage"
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest ./__test__/lib/stacks_and_queues/fifo_animal_shelter.js  --watchAll --verbose --coverage"
   },
   "repository": {
     "type": "git",
