--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "array_shift.js",
   "dependencies": {
     "eslint": "^4.19.1",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "babel-env": "^2.4.1",
+    "babel-eslint": "^8.2.3",
+    "babel-register": "^6.26.0"
   },
   "devDependencies": {},
   "scripts": {
